tests/specs/ecosystem/std/archive/0_213_0.test
std/archive/0.213.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/io@^0.213.0": "jsr:@std/io@0.213.1"
    },
    "jsr": {
      "@std/io@0.213.1": {
        "integrity": "18ee1ab872d43077d9ced51ffae38093ad4e818d2b23c3b18a6683edf5f428ae"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Seeker'.
  constructor(meta: TarMetaWithLinkName, header: TarHeader, reader: Reader | (Reader & Deno.Seeker)){}
                                                                                            ~~~~~~
    at file://<tmpdir>/untar.ts:16:93

error: Type checking failed.

